# NumericalAnalysis

./: CMakeLists.txt  equation.cpp  equation.h  global.h  main.cpp  nonlinear_equation.cpp  nonlinear_equation.h
